--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:minHeight="?android:attr/listPreferredItemHeight"
@@ -13,6 +14,8 @@
         android:layout_height="80dp"
         android:elevation="12dp"
         android:id="@+id/view2"
+        android:shape="ring"
+        app:cardCornerRadius="55dp"
         android:layout_centerHorizontal="true">
         <ImageView
             android:layout_height="80dp"
