--- a/app/src/main/res/layout/content_solarsystem_details.xml
+++ b/app/src/main/res/layout/content_solarsystem_details.xml
@@ -71,12 +71,19 @@
         <RelativeLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+
+            android:textAppearance="?android:attr/textAppearanceListItemSmall"
+            android:gravity="center_vertical"
+            android:minHeight="?android:attr/listPreferredItemHeightSmall"
+            android:background="?android:attr/selectableItemBackground"
+            >
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/rvAnimals"
+                android:id="@+id/rvMoons"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                />
 
         </RelativeLayout>
 
