--- a/app/src/main/res/layout/moon_recyclerview.xml
+++ b/app/src/main/res/layout/moon_recyclerview.xml
@@ -13,11 +13,10 @@
         android:layout_marginTop="10dp"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="7dp"
+        android:id="@+id/moonCard"
         android:elevation="8dp"
         card_view:cardElevation="10dp"
-        card_view:cardPreventCornerOverlap="false"
-        android:clickable="true"
-        android:focusable="true">
+        card_view:cardPreventCornerOverlap="false">
 
     <ImageView
         android:id="@+id/moonImage"
