--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,14 +16,13 @@
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
         android:layout_marginTop="4dp"
-        android:background="#000"
+        android:background="@color/colorPrimaryDark"
         android:visibility="visible" />
 
     <HorizontalScrollView
-
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:fillViewport="true">
         <ListView
             android:id="@+id/my_listview"
