--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -14,4 +14,10 @@
         android:orderInCategory="100"
         android:title="@string/drop_db"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_about_app"
+        android:orderInCategory="100"
+        android:title="@string/about_app"
+        app:showAsAction="never" />
 </menu>
