--- a/app/src/main/res/menu/solarsystem_activity_menu.xml
+++ b/app/src/main/res/menu/solarsystem_activity_menu.xml
@@ -4,6 +4,6 @@
         android:id="@+id/SPACEOBJ_LINK"
         android:title=""
         app:showAsAction="always"
-        android:icon="@drawable/ic_globe_solid"
+        android:icon="@drawable/ic_app_internet_v2"
         />
 </menu>
